# Air-We-Breathe

./: .gitignore  Air_We_Breath_EDA.ipynb  Air_We_Breath_Missing_Values.ipynb  LICENSE  Makefile  README.md  awb_EDA.ipynb  awb_Missing.ipynb  awb_Missing_LSTM.ipynb  awb_Missing_LSTM_XGBoost.ipynb  awb_Missing_Long.ipynb  awb_Missing_Short.ipynb  awb_Missing_Values.ipynb  awb_Preprocessing.ipynb  awb_Similarity.ipynb  awb_Validation.ipynb  environment.yml  pyproject.toml  requirements.txt  requirements_v2.txt  tsfunctions.py
.github/workflows/: main.yml
awb/: __init__.py
awb/app/: inference.py  training.py
awb/data/: connector.py
awb/ml/: model.py  processor.py  trainer.py  tuner.py
darts_logs/LSTM/: _model.pth.tar
darts_logs/LSTM_10-2018_North_Vancouver_Mahon_Park_PM25/: _model.pth.tar
darts_logs/LSTM_10-2018_North_Vancouver_Second_Narrows_PM25/: _model.pth.tar
darts_logs/LSTM_10-2018_Vancouver_Clark_Drive_PM25/: _model.pth.tar
darts_logs/LSTM_10-2018_Vancouver_International_Airport_#2_PM25/: _model.pth.tar
darts_logs/LSTM_11-2017_North_Vancouver_Mahon_Park_PM25/: _model.pth.tar
darts_logs/LSTM_11-2017_North_Vancouver_Second_Narrows_PM25/: _model.pth.tar
darts_logs/LSTM_11-2017_Vancouver_Clark_Drive_PM25/: _model.pth.tar
darts_logs/LSTM_11-2017_Vancouver_International_Airport_#2_PM25/: _model.pth.tar
data/: 2016_2021_master_df.csv  North_Vancouver_Mahon_Park.csv  North_Vancouver_Second_Narrows.csv  Vancouver_Clark_Drive.csv  Vancouver_International_Airport_#2.csv
models/: LSTM_Univariate.h5
tshelpers/: metrics.py  plot.py  subset.py
(+96 files in other folders)
